# rib

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  VIDEO_EMBEDDING_DEMO.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  rust-toolchain.toml  validate-docker-setup.sh
.cargo/: audit.toml
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-prod.yml  frontend.yml
docs/: DOCKER.md  bitcoin-proof-of-value-auth.md  deletion-soft-hard-design.md  design.md  dev-workflow.md  frontend-react-migration-checklist.md  frontend-react-migration.md  implementation-checklist.md  production-release.md  repository-review-2026-07-11.md
docs/clients/: bitcoin-signer-csharp.md  bitcoin-signer-react.md  bitcoin-signer-rust.md
infra/bicep/: main.bicep  main.json  main.parameters.dev.json
k8s/: README.md  cleanup.sh  configmap.yaml  deploy.sh  hpa.yaml  ingress.yaml  minio.yaml  namespace.yaml  postgres.yaml  redis.yaml  rib-backend.yaml  rib-frontend.yaml  storage.yaml  validate.sh
k8s/base/: backend-deployment.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  minio-statefulset.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secret-example.yaml
k8s/cert-manager/: cluster-issuers.yaml
k8s/overlays/aks/: ingress-host-patch.yaml  ingress-patch.yaml  ingress.yaml  kustomization.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
migrations/: 20250831000001_init.sql  20250831_000001_init.sql  20250905000002_soft_delete.sql  20250905000003_created_by.sql  20250905_000002_soft_delete.sql  20250906000004_created_by_jsonb.sql  20250907000005_roles.sql  20260711000006_attachment_references.sql  20260711000007_subject_bans.sql  20260711000008_tripcodes.sql  20260711000009_content_constraints.sql  20260711000010_validate_content_constraints.sql
rib-react/: .dockerignore  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tsconfig.tsbuildinfo
rib-react/src/: App.tsx  main.tsx
rib-react/src/__tests__/: about.test.tsx  api.test.ts  auth.test.tsx  linkify.test.ts  videoEmbed.test.ts
rib-react/src/components/: Footer.tsx  MediaModal.tsx  ModeratorAuthorControls.tsx  Navbar.tsx
rib-react/src/hooks/: useAuth.ts  useBoards.ts  useReplies.ts  useThreads.ts
rib-react/src/lib/: api.ts  auth.ts  linkify.ts  videoEmbed.ts
scripts/: afd_bootstrap.sh  deploy-aks.sh  render-aks-manifest.sh  setup-kv-rbac.sh  smoke.sh  test.sh
src/: auth.rs  error.rs  lib.rs  main.rs  models.rs  openapi.rs  rate_limit.rs  repo.rs  routes.rs  security.rs  storage.rs
tests/: auth.rs  bitcoin_auth.rs  bitcoin_auth_insufficient_funds.rs  bitcoin_auth_mock_blockstream.rs  bitcoin_auth_mock_blockstream_large_utxo.rs  created_by.rs  deletion_moderation.rs  images.rs  moderation_identity.rs  rate_limit.rs  repo_tests.rs  routes_api.rs  security_headers.rs
(+6 files in other folders)
